--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
-    "@rpldy/upload-button": "^1.6.0",
-    "@rpldy/uploady": "^1.6.0",
     "@web-std/file": "^3.0.3",
     "axios": "^1.6.0",
+    "bee-queue": "^1.7.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -52,7 +51,6 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "prisma": "^5.5.2",
-    "prisma-erd-generator": "^1.11.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
