--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "c-listing",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "bun run ./prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate": "prisma db push --force-reset"
+    "migrate": "prisma db push --force-reset && prisma db seed"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
@@ -23,6 +27,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-table": "^8.10.7",
     "@web-std/file": "^3.0.3",
     "axios": "^1.6.0",
     "bee-queue": "^1.7.0",
@@ -32,6 +37,7 @@
     "date-fns": "^2.30.0",
     "next": "14.0.1",
     "nodemailer": "^6.9.7",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
@@ -51,7 +57,9 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "prisma": "^5.5.2",
-    "tailwindcss": "^3.3.0",
+    "prisma-erd-generator": "^1.11.1",
+    "tailwindcss": "^3.3.5",
+    "ts-node": "^10.9.1",
     "typescript": "^5"
   }
 }
