--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "prisma": {
-    "seed": "bun run ./prisma/seed.ts"
+    "seed": "node ./prisma/seed.mjs"
   },
   "scripts": {
+    "server": "nodemon server.mjs",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -34,7 +35,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "express": "^4.18.2",
     "next": "14.0.1",
     "nodemailer": "^6.9.7",
     "query-string": "^8.1.0",
@@ -55,6 +58,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
+    "nodemon": "^3.0.1",
     "postcss": "^8",
     "prisma": "^5.5.2",
     "prisma-erd-generator": "^1.11.1",
