--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
-    "next": "14.0.1",
+    "next": "^14.0.2",
     "nodemailer": "^6.9.7",
     "query-string": "^8.1.0",
     "react": "^18",
@@ -48,7 +48,8 @@
     "react-image-file-resizer": "^0.4.8",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/node": "^20",
