--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,9 @@
 DATABASE_URL=
+# Will be used as sender name on email
 MAILER_FROM_NAME=
+# will be used as sender email
 MAILER_FROM_EMAIL=
+# sender email app password (can be generated using guide mentioned in readme)
 MAILER_FROM_PASSWORD=
-SITE_URL=
+# This is email to which emails will be sent
+MAILER_TO_EMAIL=
